Update dependencies for GLSP-Server and ModelServer (#67)
* Update target platform versions

* WIP: Update versions and make glsp-server problem free

* WIP: Update versions and make model-server problem free

* Run modelserver as JAR product

* Run glspserver as JAR product

* Use default notation provided by dependency

* Fix ModelServerV2 routes in client and activate UmlModelServerRoutes

* Fix codec usage

* Extend package structure for easier maintenance

* Move unused commons to old package in modelserver and allow to add lifelines

* Fix creation of lifelines by using custom shape command

* Fix creation of messages by using custom edge command